use non-deprecated version of newInstance(), remove input/output stream additions to test mysterious switching of output streams observed in STAT-139